--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 annotated-types==0.7.0
 anyio==4.6.0
+attrs==24.2.0
 certifi==2024.8.30
+charset-normalizer==3.4.0
 cloudinary==1.41.0
+comtypes==1.4.7
 distro==1.9.0
 h11==0.14.0
 httpcore==1.0.6
@@ -9,13 +12,23 @@ httpx==0.27.2
 idna==3.10
 jiter==0.6.1
 openai==1.51.1
+outcome==1.3.0.post0
 pdf2image==1.17.0
 pillow==10.4.0
+pptxtopdf==0.0.2
 pydantic==2.9.2
 pydantic_core==2.23.4
+PySocks==1.7.1
 python-dotenv==1.0.1
+requests==2.32.3
+selenium==4.25.0
 six==1.16.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
 tqdm==4.66.5
+trio==0.27.0
+trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.3
+websocket-client==1.8.0
+wsproto==1.2.0
