--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,124 @@
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aioshutil==1.5
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.0
+asgiref==3.8.1
 attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.0
+build==1.2.2.post1
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+chroma-hnswlib==0.7.6
+click==8.1.7
 cloudinary==1.41.0
+coloredlogs==15.0.1
 comtypes==1.4.7
+Deprecated==1.2.14
 distro==1.9.0
+durationpy==0.9
+fastapi==0.115.2
+filelock==3.16.1
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.9.0
+google-auth==2.35.0
+googleapis-common-protos==1.65.0
+grpcio==1.67.0
 h11==0.14.0
 httpcore==1.0.6
+httptools==0.6.4
 httpx==0.27.2
+huggingface-hub==0.26.0
+humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+Jinja2==3.1.4
 jiter==0.6.1
-openai==1.51.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kubernetes==31.0.0
+litellm==1.50.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mmh3==5.0.1
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.1.0
+numpy==2.1.2
+oauthlib==3.2.2
+onnxruntime==1.19.2
+openai==1.52.0
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.7
 outcome==1.3.0.post0
+overrides==7.7.0
+packaging==24.1
 pdf2image==1.17.0
 pillow==10.4.0
+posthog==3.7.0
 pptxtopdf==0.0.2
+propcache==0.2.0
+protobuf==4.25.5
+py-zerox==0.0.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+Pygments==2.18.0
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+PyYAML==6.0.2
+redis==5.1.1
+referencing==0.35.1
+regex==2024.9.11
 requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.9.2
+rpds-py==0.20.0
+rsa==4.9
 selenium==4.25.0
+setuptools==75.2.0
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+starlette==0.40.0
+sympy==1.13.3
+tenacity==9.0.0
+tiktoken==0.8.0
+tokenizers==0.20.1
 tqdm==4.66.5
 trio==0.27.0
 trio-websocket==0.11.1
+typer==0.12.5
 typing_extensions==4.12.2
 urllib3==2.2.3
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==0.24.0
 websocket-client==1.8.0
+websockets==13.1
+wrapt==1.16.0
 wsproto==1.2.0
+yarl==1.15.5
+zipp==3.20.2
